# langchain_tutorial

./: .gitignore  requirements.txt
chatbot/: main.py  pyproject.toml
deployment/: app.py
