[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain[openai]>=1.0.8",
    "langserve>=0.3.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
